--- a/home/index.html
+++ b/home/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<!DOCTYPE html><html lang="en"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>q5</title>
@@ -34,8 +31,7 @@
 			<div class="btn">
 				<div id="darkModeIcon"></div>
 			</div>
-			<textarea id="scriptLink" rows="1"
-				readonly="">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;</textarea>
+			<textarea id="scriptLink" rows="1" readonly="">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;</textarea>
 			<div class="btn">
 				<div id="fullscreenIcon"></div>
 			</div>
@@ -43,16 +39,22 @@
 	</div>
 	<div id="reel1" class="reel">
 		<md id="md1-0">
-			<h2 id="create-art-with-q5js-🎨">Create art with q5.js! 🎨</h2>
-			<p><strong>q5.js</strong> is a spiritual successor to the <a href="https://p5js.org" target="_blank">p5.js</a> and
-				<a href="https://processing.org/" target="_blank">Processing Java</a> graphics libraries.
-			</p>
-			<p>It was designed to make creative coding fun and accessible for a new generation of artists, designers,
-				educators, and beginners.</p>
-			<p>If you're already familiar with p5, you'll find yourself right at home with q5. It's also compatible with
-				popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a>
-				and <a href="https://p5play.org" target="_blank">p5play</a>.</p>
-		</md>
+<h2 id="create-art-with-q5js-🎨">Create art with q5.js! 🎨</h2>
+<p><strong>q5.js</strong> is a spiritual successor to the <a href="https://p5js.org" target="_blank">p5.js</a> and <a href="https://processing.org/" target="_blank">Processing Java</a> graphics libraries. ⭐️</p>
+<ul>
+<li>performance optimized for interactive art 🚀</li>
+<li>includes a brand new renderer powered by WebGPU 💪</li>
+<li>up to 32x faster than p5.js 🏎️</li>
+<li>HDR color support 🌈</li>
+<li>compatible with popular addons, including <a href="https://p5js.org/reference/#/libraries/p5.sound" target="_blank">p5.sound</a> and <a href="https://p5play.org" target="_blank">p5play</a> 🎮</li>
+<li>no dependencies, less than 100kb minified 📦</li>
+<li>LGPL licensed (just like p5.js) 🆓</li>
+</ul>
+<p>q5.js was designed to make creative coding fun and accessible for a new generation of artists, designers, educators, and beginners. 🤝</p>
+</md>
+		<md id="md1-1">
+<p>If you're already familiar with p5, you'll find yourself right at home with q5. 🏡</p>
+</md>
 		<div class="minis horiz">
 			<script type="mie/p5" id="p5.js" horiz="" width="350px">
 function setup() {
@@ -89,13 +91,10 @@ function setup() {
 	</div> -->
 	<div id="reel2" class="reel">
 		<md id="md2-0">
-			<h2 id="blazing-fast-🚀">Blazing fast! 🚀</h2>
-			<p>q5 is performance optimized for the modern web. Create interactive art that runs in real-time on more devices
-				than ever before. 🏎️</p>
-			<p><a href="https://github.com/q5js/q5.js/wiki/Developer-Log" target="_blank">Draw up to 32x more</a> per frame
-				with <a href="https://developer.mozilla.org/docs/Web/API/WebGPU_API" target="_blank">q5 WebGPU</a>, compared to
-				the limits of p5. Or save battery by getting the same results with less power consumption. 🌱</p>
-		</md>
+<h2 id="blazing-fast-🚀">Blazing fast! 🚀</h2>
+<p><a href="https://github.com/q5js/q5.js/wiki/Developer-Log" target="_blank">Draw up to 32x more</a> per frame with <a href="https://developer.mozilla.org/docs/Web/API/WebGPU_API" target="_blank">q5 WebGPU</a>, compared to the limits of p5. Or save battery by getting the same results with less power consumption. 🌱</p>
+<p>Switching from p5 to q5 is like getting a free computer upgrade. 🎉</p>
+</md>
 		<script type="mie/q5" id="rainbowLoops" renderer="webgpu" hide-editor="">
 let size;
 
@@ -130,36 +129,31 @@ function draw() {
 	<div id="reel3" class="reel">
 		<div class="minis horiz">
 			<md id="md3-0">
-				<h2 id="start-coding-💻">Start coding! 💻</h2>
-				<p>No installation required! Use an online code editor with one of these q5.js template projects: <a
-						href="https://openprocessing.org/sketch/2471587" target="_blank">OpenProcessing</a>, <a
-						href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">Aijs</a>, or <a
-						href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>. 🖌️</p>
-			</md>
+<h2 id="start-coding-💻">Start coding! 💻</h2>
+<p>No installation required! Use an online code editor with one of these q5.js template projects: <a href="https://openprocessing.org/sketch/2471587" target="_blank">OpenProcessing</a>, <a href="https://aijs.io/editor?user=quinton-ashley&amp;project=logoSpin" target="_blank">Aijs</a>, or <a href="https://codepen.io/qashto/pen/jENEJNy" target="_blank">CodePen</a>. 🖌️</p>
+</md>
 			<md id="md3-1">
-				<h2 id="join-our-community-🤝">Join our community 🤝</h2>
-				<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB"
-						target="_blank">q5 community Discord</a>. 🙋</p>
-			</md>
+<h2 id="join-our-community-🤝">Join our community 🤝</h2>
+<p>The future of creative coding is here! Join us on the <a href="https://discord.gg/QuxQYwGWuB" target="_blank">q5 community Discord</a>. 🙋</p>
+</md>
 			<md id="md3-2">
-				<h2 id="local-development-🛠️">Local development 🛠️</h2>
-				<p>You can <a href="https://github.com/q5js/q5.js/wiki/Get-Started" target="_blank">use q5 offline</a> or add
-					this to your HTML file to always load the latest version.</p>
-				<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
+<h2 id="local-development-🛠️">Local development 🛠️</h2>
+<p>You can <a href="https://github.com/q5js/q5.js/wiki/Get-Started" target="_blank">use q5 offline</a> or add this to your HTML file to always load the latest version.</p>
+<pre><code class="language-html">&lt;script src="https://q5js.org/q5.js"&gt;&lt;/script&gt;
 </code></pre>
-			</md>
+</md>
 			<md id="md3-3">
-				<h2 id="support-q5-💙">Support q5 💙</h2>
-				<p>Support the development of q5 on <a href="https://www.patreon.com/c/p5play" target="_blank">Patreon</a> or <a
-						href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a>.</p>
-			</md>
+<h2 id="support-q5-💙">Support q5 💙</h2>
+<p>q5 is open source and anyone can use it for free under the terms of the LGPL (just like p5.js). 🎉</p>
+<p>We need your support though! If you enjoy using q5.js, please donate via <a href="https://github.com/sponsors/quinton-ashley" target="_blank">GitHub Sponsors</a> or <a href="https://www.patreon.com/q5play" target="_blank">Patreon</a>.</p>
+</md>
 		</div>
 	</div>
 
 	<div id="reel4" class="reel">
 		<md id="md4-0">
-			<h2 id="more-vibrant-colors-🎨">More vibrant colors! 🎨</h2>
-		</md>
+<h2 id="more-vibrant-colors-🎨">More vibrant colors! 🎨</h2>
+</md>
 		<div class="minis horiz">
 			<div>
 				<script type="mie/p5" id="SDR" hide-editor="">
@@ -202,8 +196,8 @@ function windowResized() {
 }
 				</script>
 				<md id="md4-1">
-					<p>In p5, bright colors can look dull 😕</p>
-				</md>
+<p>In p5, bright colors can look dull 😕</p>
+</md>
 			</div>
 			<div>
 				<script type="mie/q5" id="HDR" hide-editor="">
@@ -239,88 +233,72 @@ function windowResized() {
 }
 			</script>
 				<md id="md4-2">
-					<p>q5 empowers artists with <a
-							href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#hdr-color-support" target="_blank">HDR
-							color support</a> 🤩</p>
-				</md>
+<p>q5 empowers artists with <a href="https://github.com/quinton-ashley/q5.js?tab=readme-ov-file#hdr-color-support" target="_blank">HDR color support</a> 🤩</p>
+</md>
 			</div>
 		</div>
 	</div>
 	<div id="reel5" class="reel">
 		<md id="md5-0">
-			<h2 id="more-help-for-beginners-✨">More help for beginners! ✨</h2>
-			<p>Why doesn't this code work? <code>text('Hello!')</code> 🤔</p>
-		</md>
+<h2 id="more-help-for-beginners-✨">More help for beginners! ✨</h2>
+<p>Why doesn't this code work? <code>text('Hello!')</code> 🤔</p>
+</md>
 		<div class="minis horiz">
 			<md id="md5-1">
-				<p>p5's error messages are often too vague, leaving users searching for help. 🙋</p>
-				<pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
+<p>p5's error messages are often too vague, leaving users searching for help. 🙋</p>
+<pre><code>🌸 p5.js says: [test.js, line 19] text() was expecting at least 3 arguments, but received only 1.
 </code></pre>
-			</md>
+</md>
 			<md id="md5-2">
-				<p>Run q5's <code>askAI()</code> before code that isn't working as expected. 🤖</p>
-				<pre><code>The `text` function requires the x and y coordinates where the text should be drawn to the canvas.
+<p>Run q5's <code>askAI()</code> before code that isn't working as expected. 🤖</p>
+<pre><code>The `text` function requires the x and y coordinates where the text should be drawn to the canvas.
 
 text('Hello!', 50, 50);
 </code></pre>
-			</md>
+</md>
 		</div>
 	</div>
 	<div id="reel10" class="reel">
 		<div class="minis horiz">
 			<md id="md10-0">
-				<h2 id="dynamic-🐙">Dynamic 🐙</h2>
-				<p>Q5 instances can be created manually, which makes the <code>setup</code> function optional. Use q5 functions
-					anywhere with <a href="https://github.com/q5js/q5.js/wiki/Top%E2%80%90Level-Global-Mode"
-						target="_blank">top-level global mode</a>! 👀</p>
-				<pre><code class="language-js">new Q5();
+<h2 id="dynamic-🐙">Dynamic 🐙</h2>
+<p>Q5 instances can be created manually, which makes the <code>setup</code> function optional. Use q5 functions anywhere with <a href="https://github.com/q5js/q5.js/wiki/Top%E2%80%90Level-Global-Mode" target="_blank">top-level global mode</a>! 👀</p>
+<pre><code class="language-js">new Q5();
 
 createCanvas(400, 400);
 </code></pre>
-			</md>
+</md>
 			<md id="md10-1">
-				<h2 id="sound-on-🔊">Sound On 🔊</h2>
-				<p>p5.sound is a great library, but typical use doesn't require its extensive sound generation and filtering
-					features. 🎛️</p>
-				<p>q5.js includes sound loading, playback, and basic mixing by default. 🎚️</p>
-			</md>
+<h2 id="sound-on-🔊">Sound On 🔊</h2>
+<p>p5.sound is a great library, but typical use doesn't require its extensive sound generation and filtering features. 🎛️</p>
+<p>q5.js includes sound loading, playback, and basic mixing by default. 🎚️</p>
+</md>
 			<md id="md10-2">
-				<h2 id="lightweight-🪶">Lightweight 🪶</h2>
-				<p>p5.js and p5.sound.js have a combined size of 5.6MB! ⚠️</p>
-				<p>q5.js is only 111kb, that's 98% smaller. 🌳</p>
-				<p>For extremely lightweight use, load only the features you need from the <a
-						href="https://github.com/q5js/q5.js/tree/main/src" target="_blank">q5 source folder</a>. 📦</p>
-			</md>
+<h2 id="lightweight-🪶">Lightweight 🪶</h2>
+<p>p5.js and p5.sound.js have a combined size of 5.6MB! ⚠️</p>
+<p>q5.js is only 111kb, that's 98% smaller. 🌳</p>
+<p>For extremely lightweight use, load only the features you need from the <a href="https://github.com/q5js/q5.js/tree/main/src" target="_blank">q5 source folder</a>. 📦</p>
+</md>
 			<md id="md10-3">
-				<h2 id="frame-your-art-🖼️">Frame your Art 🖼️</h2>
-				<p>The <code>displayMode</code> function lets you frame your art within the browser window, no CSS skills
-					required! 📽️</p>
-				<p>Make it "centered", "maxed", or "fullscreen" without clipping or changing the aspect ratio. Use the
-					"pixelated" rendering preset to make pixel art. 👾</p>
-			</md>
+<h2 id="frame-your-art-🖼️">Frame your Art 🖼️</h2>
+<p>The <code>displayMode</code> function lets you frame your art within the browser window, no CSS skills required! 📽️</p>
+<p>Make it "centered", "maxed", or "fullscreen" without clipping or changing the aspect ratio. Use the "pixelated" rendering preset to make pixel art. 👾</p>
+</md>
 		</div>
 	</div>
 
 	<div id="reel20" class="reel">
 		<md id="md20-0">
-			<h2 id="credits-🌟">Credits 🌟</h2>
-			<p>This project aims to be the spiritual successor to the invaluable work done by <a href="https://benfry.com"
-					target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a
-					href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com"
-					target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all
-				contributors to these projects.</p>
-			<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a
-					href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain
-				Unlicense license. We forked and significantly extended his codebase.</p>
-			<p>q5.js v2 is open source under the LGPLv3, created and actively maintained by the q5 team: <a
-					href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a> and <a
-					href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
-		</md>
+<h2 id="credits-🌟">Credits 🌟</h2>
+<p>This project aims to be the spiritual successor to the incredible work done by <a href="https://benfry.com" target="_blank">Ben Fry</a> and <a href="https://x.com/REAS" target="_blank">Casey Reas</a> on Java <a href="https://processingfoundation.org/" target="_blank">Processing</a>, <a href="http://lauren-mccarthy.com" target="_blank">Lauren McCarthy</a>'s work on <a href="https://p5js.org" target="_blank">p5.js</a>, and all contributors to these projects.</p>
+<p>The original <a href="https://github.com/LingDong-/q5xjs" target="_blank">q5xjs (v0)</a> was created by <a href="https://github.com/LingDong-" target="_blank">@LingDong~</a> and released under the public domain Unlicense license. We forked and significantly extended the unmaintained codebase.</p>
+<p>q5.js v2 is open source under the LGPLv3, created and actively maintained by the q5 team: <a href="https://github.com/quinton-ashley" target="_blank">@quinton-ashley</a> and <a href="https://github.com/Tezumie" target="_blank">@Tezumie</a>.</p>
+</md>
 	</div>
 	<footer>
 		<md id="md100">
-			<p>q5js.org was created by the q5 team. Copyright 2024.</p>
-		</md>
+<p>q5js.org was created by the q5 team. Copyright 2024.</p>
+</md>
 	</footer>
 
 	<script src="../q5.js"></script>
@@ -419,21 +397,4 @@ createCanvas(400, 400);
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-</html>
+</body></html>
