--- a/dev/index.html
+++ b/dev/index.html
@@ -22,10 +22,10 @@
 
 	<script src="/src/q5-core.js"></script>
 	<script src="/src/q5-canvas.js"></script>
-	<script src="/src/q5-2d-canvas.js"></script>
-	<script src="/src/q5-2d-drawing.js"></script>
-	<script src="/src/q5-2d-image.js"></script>
-	<script src="/src/q5-2d-text.js"></script>
+	<script src="/src/q5-c2d-canvas.js"></script>
+	<script src="/src/q5-c2d-drawing.js"></script>
+	<script src="/src/q5-c2d-image.js"></script>
+	<script src="/src/q5-c2d-text.js"></script>
 	<script src="/src/q5-ai.js"></script>
 	<script src="/src/q5-color.js"></script>
 	<script src="/src/q5-display.js"></script>
@@ -45,8 +45,6 @@
 	<!-- <script src="/src/q5-2d-soft-filters.js"></script> -->
 	<!-- <script src="/src/q5-noisier.js"></script> -->
 	<!-- <script src="/src/q5-sensors.js"></script> -->
-
-	<!-- <script src="https://cdn.jsdelivr.net/npm/p5.capture"></script> -->
 
 	<script src="sketch.js"></script>
 </body>
