--- a/dev/mjs.html
+++ b/dev/mjs.html
@@ -30,6 +30,7 @@
 		import '/src/q5-ai.js';
 		import '/src/q5-color.js';
 		import '/src/q5-display.js';
+		import '/src/q5-dom.js';
 		import '/src/q5-input.js';
 		import '/src/q5-math.js';
 		import '/src/q5-record.js';
