--- a/dev/index.html
+++ b/dev/index.html
@@ -28,6 +28,7 @@
 	<script src="/src/q5-c2d-text.js"></script>
 	<script src="/src/q5-ai.js"></script>
 	<script src="/src/q5-color.js"></script>
+	<script src="/src/q5-dom.js"></script>
 	<script src="/src/q5-display.js"></script>
 	<script src="/src/q5-input.js"></script>
 	<script src="/src/q5-math.js"></script>
