--- a/learn/index.html
+++ b/learn/index.html
@@ -29,15 +29,14 @@
 		</div>
 	</header>
 	<div class="allContent">
-		<nav id="navbar" class="navopen">
-		</nav>
-		<main id="content" class="fade-in" style="scroll-behavior: auto;"></main>
+		<nav id="navbar" class="navopen"></nav>
+		<main id="content" class="fade-in"></main>
 	</div>
 
 	<script src="/q5.js"></script>
 
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.52.0/min/vs/loader.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.52.2/min/vs/loader.min.js"></script>
 	<script src="mini-editor.js"></script>
 
 	<script src="docs.js"></script>
